syntax = "proto3";

package com.hlebon.betpawa.protos;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.hlebon.betpawa.protos";
option java_outer_classname = "BetpawaServiceProto";

service BetpawaService {

    rpc Deposit (DepositRequest) returns (VoidResponse);

    rpc Withdraw (WithdrawRequest) returns (VoidResponse);

    rpc Balance (BalanceRequest) returns (BalanceResponse);

}

// Deposit

message DepositRequest {
    int32 user_id = 1;
    int64 amount = 2;
    Currency currency = 3;
}

enum Currency {
    INVALID = 0;
    EUR = 1;
    USD = 2;
    GBP = 3;
}

// Withdraw

message WithdrawRequest {
    int32 user_id = 1;
    int64 amount = 2;
    Currency currency = 3;
}

// Balance

message BalanceRequest {
    int32 user_id = 1;
}

message BalanceResponse {
    repeated CurrencyBalance balances = 1;
    Error error = 2;
}

message CurrencyBalance {
    int64 amount = 1;
    Currency currency = 2;
}
